removed the seawater dependency

--- a/settings.ini
+++ b/settings.ini
@@ -31,7 +31,7 @@ author = Jonathan Bourne
 author_email = jonathan.s.bourne@gmail.com
 copyright = 2022 onwards, %(author)s
 description = A library of functions for understanding the performance of ships during commissioning sea trials
-keywords = shipping weather ocean waves physics ITTC seatrials commissioning ship ocean standard ISO
+keywords = shipping weather ocean waves physics ITTC seatrials commissioning ship ocean standard ISO ITTC
 language = English
 status = 3
 user = JonnoB
@@ -44,7 +44,7 @@ user = JonnoB
 #Why is this not being imported to the setup file?
 #package_data={'': ['datasets/*.csv']}
 
-requirements = fastcore pandas numpy seawater
+requirements = fastcore pandas numpy
 ### Optional ###
 dev_requirements = fastcore pandas numpy matplotlib scipy
 # console_scripts =
